[gd_scene load_steps=3 format=3 uid="uid://d135x3ovtmes4"]

[ext_resource type="Script" uid="uid://b8v8k3w2q7aee" path="res://scenes/userinterfaces/Options_Screen/options_screen.gd" id="1_4fc67"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fc67"]
bg_color = Color(0, 0, 0, 1)

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4fc67")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 353.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fc67")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 255.0
offset_bottom = 225.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Panel/MarginContainer/ScrollContainer/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/CenterContainer/Control"]
custom_minimum_size = Vector2(213, 500)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_top = 3.0
offset_right = 213.0
offset_bottom = 503.0
grow_horizontal = 2
scale = Vector2(0.6, 0.6)
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[node name="Control" type="Control" parent="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2

[node name="Audio_Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="HSlider" type="HSlider" parent="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer"]
layout_mode = 2

[node name="Screen_Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer"]
layout_mode = 2
text = "Screen Size"

[node name="Screen_Size_Options" type="OptionButton" parent="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2

[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/ScrollContainer/CenterContainer/Control/VBoxContainer/Screen_Size_Options" to="." method="_on_screen_size_options_item_selected"]
